[project]
name = "graphy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atlae", email = "71896235+Atlae@users.noreply.github.com" }
]
dependencies = [
    "ansunit>=0.1.7",
    "apex>=0.9.10.dev0",
    "asciitree>=0.3.3",
    "attrs>=25.4.0",
    "babel>=2.17.0",
    "black>=25.11.0",
    "click>=8.3.1",
    "clingo>=5.8.0",
    "clyngor>=0.4.3",
    "clyngor-with-clingo>=5.3.post1",
    "dataclasses>=0.8",
    "dpath>=2.2.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "fuzzywuzzy>=0.18.0",
    "inflect>=7.5.0",
    "ipython>=9.7.0",
    "jsonschema>=4.25.1",
    "levenshtein>=0.27.3",
    "matplotlib>=3.10.7",
    "mo-future>=7.685.25166",
    "msgpack>=1.1.2",
    "mypy>=1.18.2",
    "n2w>=0.1.3",
    "namedlist>=1.8",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyparsing>=3.2.5",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-levenshtein>=0.27.3",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "records>=0.6.0",
    "requests>=2.32.5",
    "revtok>=0.0.3",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "si-prefix>=1.3.3",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "vega>=4.1.0",
    "wandb>=0.23.0",
    "z3-solver>=4.15.4.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/graphy"]
